[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "OverTun-lib"
version = "0.1.0"
description = "Network tunnels builder"
readme = "README.md"
authors = [
    { name = "Alesh", email = "@AleshDodry" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.22.0",
    "h11>=0.16.0",
]

[project.scripts]
overtun = "overtun.scripts:main"

[tool.uv.build-backend]
module-name = "overtun"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-env",
    "ruff",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = [
    "-ra",
    "-q",
]

[tool.pytest_env]
env_files = ["./tests/.env"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
